# qkb

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  example-index.yml  flake.nix  migrate-schema.ts  package.json  pnpm-lock.yaml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: changelog-gate.yml  ci.yml  graph-soak-nightly.yml  publish.yml  release.yml
bench/: full-bench-eval.ts  graph-bench-eval.ts  graph-bench.ts  graph-soak.ts
docs/: SYNTAX.md
finetune/: Justfile  pyproject.toml
finetune/dataset/: prepare_data.py
scripts/: dora.sh  graphqlite-versions.json  install-hooks.sh  release.sh  setup-branch-protection.sh
skills/qkb/: SKILL.md
src/: ast.ts  bench-rerank.ts  collections.ts  commands-composite.ts  commands.ts  db.ts  embedded-skills.ts  index.ts  llm.ts  maintenance.ts  store-bridge.ts  store.ts  test-preload.ts
test/: Containerfile  ast-chunking.test.ts  ast.test.ts  bench-score.test.ts  cli.test.ts  collections-config.test.ts  eval-bm25.test.ts  eval-deep-research.ts  eval-harness.ts  eval.test.ts  formatter.test.ts  fts-cjk-migration.test.ts  graph-algos-safety.test.ts  graph-bench.test.ts  graph-bootstrap.test.ts  graph-bulk-insert.test.ts  graph-cli.test.ts  graph-config.test.ts  graph-dump-restore.test.ts  graph-entity-extraction.test.ts  graph-hybrid.test.ts  graph-loader.test.ts  graph-mcp.test.ts  graph-sdk.test.ts  graph-tx-cascade.test.ts  graph-wikilink-extraction.test.ts  intent.test.ts  launcher-detection.test.sh  llm.test.ts  mcp.test.ts  multi-collection-filter.test.ts  onnx.test.ts  rrf-trace.test.ts  score-blend.test.ts  sdk.test.ts  smoke-install.sh  store-paths.test.ts  store.helpers.unit.test.ts  store.test.ts  structured-search.test.ts  (+1 more)
(+73 files in other folders)
