[project]
name = "qmd-finetune"
version = "0.1.0"
description = "QMD query expansion fine-tuning tools"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "trl>=0.12.0",
  "peft>=0.7.0",
  "transformers>=5.0.0rc3",
  "accelerate>=0.24.0",
  "huggingface_hub>=0.20.0",
  "trackio",
  "datasets",
  "pyyaml",
  "gguf",
  "sentencepiece",
  "nvidia-ml-py",
  "pydantic>=2.0",
]

[dependency-groups]
dev = []

[tool.uv]
constraint-dependencies = [
  "authlib>=1.6.9",
  "aiohttp>=3.13.4",
  "cryptography>=46.0.7",
]
