[project]
name = "qmd-finetune"
version = "0.1.0"
description = "QMD query expansion fine-tuning tools"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "trl>=1.8.0",
  "peft>=0.19.1",
  "transformers>=5.13.1",
  "accelerate>=1.14.0",
  "huggingface_hub>=1.23.0",
  "trackio",
  "datasets",
  "pyyaml",
  "gguf",
  "sentencepiece",
  "nvidia-ml-py",
  "pydantic>=2.13.4",
]

[dependency-groups]
dev = []

[tool.uv]
constraint-dependencies = [
  "authlib>=1.6.9",
  "aiohttp>=3.13.4",
  "cryptography>=46.0.7",
]
